@@ -1,6 +1,10 @@
 CHANGES IN VERSION 1.2.0
 ------------------------
 
+NEW FEATURES
+
+    o Support for TabixFile VCF files
+
 BUG FIXES
 
     o incorrect tab completion does not reset the completion line
